--- a/HTML/(borrar)descargaOtras.html
+++ b/HTML/(borrar)descargaOtras.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descargar Documentos: Física</title>
+    <title>Descargar Documentos: Otras Disciplinas</title>
     <link rel="shortcut icon" href="../imagenes/logo-final.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/CSS_carrusel2.css">
     <link rel="stylesheet" href="../CSS/resetEstilo.css">
+    <link rel="stylesheet" href="../CSS/headerYFooter.css">
     <link rel="stylesheet" href="../CSS/menuDesplegable.css">
-    <link rel="stylesheet" href="../CSS/estiloDescargaFisica.css">
+    <link rel="stylesheet" href="../CSS/estiloDescargaOtros.css">
     <script src="../JS/JS_carrusel2.js"></script>
 </head>
 
@@ -48,19 +49,8 @@
                     <input size="30" type="text" name="titulo" id="titul">
                     <label for="tema">Temática del documento:</label>
                     <select name="tematica" id="tema">
-                        <option>Física</option>
+                        <option>Otras Disciplinas</option>
                     </select>
-                    <label for="tip">Tipo de documento:</label>
-                    <select name="tipo" id="tip">
-                        <option>Ensayo</option>
-                        <option>Monografía</option>
-                        <option>Trabajo Práctico</option>
-                        <option>Ejercicios resueltos</option>
-                        <option>Informe</option>
-                        <option>Otro</option>
-                    </select>
-                    <label for="descrip">Documentos encontrados:</label>
-                    <textarea name="descrip" id="descrip" cols="40" rows="3"></textarea></fieldset>
                     <input class="botones" type="submit" value="Descargar Documento">
                 </form>
             </div>
