--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
     <div class="contenidoUno" id="mostrado">
 
 
-      <div><a href="../TPO-Desarrollo-Web-HTML-CSS-y-Javascript-conapi/HTML/descargaFisica.html"><img
+      <div><a href="/HTML/descargas.html"><img
             src="../imagenes/física-e1534938838719.jpg" alt="pizarra con formulas de física" title="Física"
             class="pizarras"><span>Física</span></a>
       </div>
 
-      <div><a href="descargaMatematica.html"><img src="../imagenes/Matematicas.png"
+      <div><a href="/HTML/descargas.html"><img src="../imagenes/Matematicas.png"
             alt="pizarra con  formulas matemática" title="Matemática" class="pizarras"><span>Matemática</span></a>
       </div>
 
-      <div><a href="descargaBiologia.html"><img src="../imagenes/Biología.jpg" alt="pizarra con formulas de física"
+      <div><a href="/HTML/descargas.html"><img src="../imagenes/Biología.jpg" alt="pizarra con formulas de física"
             title="Biología" class="pizarras"><span>Biología</span></a> </div>
 
-      <div> <a href="descargaQuimica.html"><img src="../imagenes/quimica.jpg"
+      <div> <a href="/HTML/descargas.html"><img src="../imagenes/quimica.jpg"
             alt="ampolla con contenido y un esquema de estructura molecular de la sustancia" title="Química"
             class="pizarras"><span>Química</span></a></div>
 
-      <div><a href="descargaGeografia.html"><img src="../imagenes/geografia.jpg" alt="Mapa y una brújula"
+      <div><a href="/HTML/descargas.html"><img src="../imagenes/geografia.jpg" alt="Mapa y una brújula"
             title="Geografía" class="pizarras"><span>Geografía</span></a></div>
 
-      <div><a href="descargaHistoria.html"><img src="../imagenes/historia1.jpg" alt="Libros antiguos y una lupa"
+      <div><a href="/HTML/descargas.html"><img src="../imagenes/historia1.jpg" alt="Libros antiguos y una lupa"
             title="Historia" class="pizarras"><span>Historia</span></a> </div>
 
-      <div><a href="descargaFilosofia.html"><img src="../imagenes/Filosofia.jpg" alt="Bustos de filosofos"
+      <div><a href="/HTML/descargas.html"><img src="../imagenes/Filosofia.jpg" alt="Bustos de filosofos"
             title="Filosofía" class="pizarras"><span>Filosofía</span></a></div>
 
-      <div><a href="descargaOtras.html"><img src="../imagenes/otras_disiplinas.jpg"
+      <div><a href="/HTML/descargas.html"><img src="../imagenes/otras_disiplinas.jpg"
             alt="esquemas de sistintas diciplinas tecnológicas" title="Otras Disciplinas" class="pizarras"><span>Otras
             Disciplinas</span></a>
       </div>
